# guardianpkg

./: CONTRIBUTING.md  README.md  pyproject.toml
docs/: example.ipynb  make.bat
docs/_build/doctrees/: changelog.doctree  conduct.doctree  contributing.doctree  environment.pickle  example.doctree  index.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/guardianpkg/: index.doctree
docs/_build/doctrees/source/: guardianpkg.doctree  modules.doctree
docs/_build/html/: conduct.html  contributing.html  example.html  genindex.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_sources/autoapi/: index.rst.txt
docs/_build/html/autoapi/: index.html
docs/_build/html/autoapi/guardianpkg/: index.html
docs/_build/jupyter_execute/: example.ipynb
guardianpkg/: .env.rtf  CHANGELOG.md  README.md  api_key.py  guardianpkg.py  pyproject.toml
guardianpkg/docs/: Makefile  conf.py
guardianpkg/docs/_build/doctrees/: changelog.doctree  environment.pickle
guardianpkg/docs/_build/doctrees/autoapi/guardianpkg/: index.doctree
guardianpkg/docs/_build/html/: .buildinfo  changelog.html  index.html  search.html
guardianpkg/docs/_build/html/_sources/autoapi/guardianpkg/: index.rst.txt
guardianpkg/docs/_build/html/_sources/autoapi/guardianpkg/guardianpkg/: index.rst.txt
guardianpkg/docs/_build/html/source/: guardianpkg.html  modules.html
guardianpkg/docs/source/: guardianpkg.rst  modules.rst
guardianpkg/src/guardianpkg/: __init__.py  guardianpkg.py
guardianpkg/tests/: test_guardianpkg.py
tests/: test_guardianpkg.py
(+3 files in other folders)
